[fix] grid spacing between rows

--- a/src/assets/scss/forminator-ui/_grid.scss
+++ b/src/assets/scss/forminator-ui/_grid.scss
@@ -1,7 +1,7 @@
 @include body-class(custom-form) {
 
 	// SPACING: Default
-	&:not(.forminator-enclosed) {
+	&:not(.forminator-enclosed):not(.forminator-custom) {
 
 		// ELEMENT: Row
 		.forminator-row {
@@ -66,7 +66,7 @@
 		}
 
 		// SPACING: Default
-		&:not(.forminator-enclosed) {
+		&:not(.forminator-enclosed):not(.forminator-custom) {
 
 			// ELEMENT: Row
 			.forminator-row {
@@ -79,6 +79,13 @@
 
 			// ELEMENT: Column
 			.forminator-col {
+
+				&:not(:last-child) {
+
+					@include media(min-width, md) {
+						margin-bottom: 0;
+					}
+				}
 
 				@include media(min-width, md) {
 					padding: 0 #{$gutter / 2};
